# vulnbridge

./: LICENSE  README.md  pyproject.toml
examples/: README.md  clamav-sample.txt  dependency-check-juiceshop.json  gitleaks-juiceshop.json  grype-alpine.json  nikto-sample.json  npm-audit-juiceshop.json  semgrep-juiceshop.json  trivy-alpine.json  zap-juiceshop.json
src/vulnbridge/: cli.py  dashboard.py  schema.py
src/vulnbridge/parsers/: __init__.py  clamav.py  dependency_check.py  gitleaks.py  grype.py  nikto.py  npm_audit.py  semgrep.py  trivy.py  zap.py
src/vulnscout/: cli.py  schema.py
src/vulnscout/parsers/: __init__.py  dependency_check.py  grype.py  npm_audit.py  trivy.py
