[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnscout"
version = "0.1.0"
description = "Normalize multi-scanner vulnerability reports into one NVD-based schema"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
vulnscout = "vulnscout.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
